--- a/presentation_amortized_loans.ipynb
+++ b/presentation_amortized_loans.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After the first month Jim ows the interest on the initial principal $P_1 r$ and makes a payment $A$ which covers the interest and, the leftover, reduces the outstanding principal. The outstanding principal $P_2$ is than\n",
+    "After the first month Jim owes the interest on the initial principal $P_1 r$ and makes a payment $A$ which covers the interest and, the leftover, reduces the outstanding principal. The outstanding principal $P_2$ is than\n",
     "    \n",
     "$$ P_2 = P_1 r - A.$$"
    ]
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sue wants to borrow 1 000 SEK from the bank with 5% annual interest rate and agrees to repay the loan in 1 year.\n",
+    "Sue wants to borrow 1 000 SEK from the bank with 4% annual interest rate and agrees to repay the loan in 1 year.\n",
     "\n",
     "- What is her monthly payment?\n",
     "- How much money, in total, does she give to the bank after the loan is settled?\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bank recieves\n",
+    "The bank receives\n",
     "\n",
     "$$\\frac{85.15}{1,000.00} = 8.51\\% ,$$\n",
     "\n",
@@ -215,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and is **less than the annual interest rate 5.00%, on which Sue borrowed, because Sue held the loan for one year and the outstanding principal is a strictly decreasing function of time.**"
+    "and is **less than the annual interest rate 4.00%, on which Sue borrowed, because Sue held the loan for one year and the outstanding principal is a strictly decreasing function of time.**"
    ]
   },
   {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bank recieves\n",
+    "The bank receives\n",
     "\n",
     "$$\\frac{10.12}{1,000.00} = 1.01\\% ,$$\n",
     "\n",
@@ -337,7 +337,7 @@
     "Amortized loans are payed off with monthly payments $A_n$ that compose of\n",
     "\n",
     "- interest payments $ I_n $\n",
-    "- amortization $ A_n^\\prime $ - part that reduces the outsdanding principal\n",
+    "- amortization $ A_n^\\prime $ - part that reduces the outstanding principal\n",
     "\n",
     "Therefore, we can write\n",
     "\n",
@@ -410,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualisation:"
+    "Visualization:"
    ]
   },
   {
@@ -538,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How much would the Svenssons pay if they decied to pay off the loan, with the original parameters, in 10 or 20 years instead? "
+    "How much would the Svenssons pay if they decide to pay off the loan, with the original parameters, in 10 or 20 years instead? "
    ]
   },
   {
@@ -657,11 +657,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Net profit is defined as the sum of all payments devided by the initial principal\n",
+    "Net profit is defined as the sum of all payments divided by the initial principal\n",
     "\n",
     "$$ \\eta = \\frac{A \\, T}{P}, \\qquad (2)$$\n",
     "\n",
-    "and represents the return on the lended capital for the lender and the total loan cost for the borrower. Substituting (1) in (2) gives\n",
+    "and represents the return on the loaned capital for the lender and the total loan cost for the borrower. Substituting (1) in (2) gives\n",
     "\n",
     "$$ \\eta = \\frac{r \\; T}{1 - \\left( \\frac{1}{1 + r} \\right)^T}. \\qquad (3)$$\n",
     "\n",
@@ -771,7 +771,7 @@
     "\n",
     "$$ T = \\frac{\\ln\\left(1 - r \\rho^{-1} \\right)}{\\ln\\left( \\frac{1}{1+r} \\right)}, $$\n",
     "\n",
-    "where $\\rho = \\frac{A}{P}$ is the percentage of the loan principle that is repayed each month."
+    "where $\\rho = \\frac{A}{P}$ is the percentage of the loan principle that is re-payed each month."
    ]
   },
   {
@@ -856,7 +856,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Renagotiating the Loan and Tune the Parameters in Your Favour"
+    "#### Renegotiating the Loan and Tune the Parameters in Your Favor"
    ]
   },
   {
