Fix Raw NBConvert

--- a/presentation_amortized_loans.ipynb
+++ b/presentation_amortized_loans.ipynb
@@ -500,9 +500,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "%%capture\n",
     "from plotting import plot_rate_difference\n",
     "\n",
     "p, r1, r2, r3, T = 2_500_000, 0.030, 0.045, 0.060, 30\n",
@@ -552,9 +555,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "%%capture\n",
     "from plotting import plot_term_difference\n",
     "\n",
     "p, r, T1, T2, T3 = 2_500_000, 0.045, 10, 20, 30\n",
@@ -612,9 +618,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "%%capture\n",
     "from plotting import plot_term_difference\n",
     "\n",
     "p, r, T1, T2, T3, rf = 2_500_000, 0.045, 10, 20, 30, 0.015\n",
@@ -717,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -788,9 +797,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "%%capture\n",
     "from plotting import plot_term_sensitivity\n",
     "\n",
     "plot_term_sensitivity()"
