--- a/presentation_amortized_loans.ipynb
+++ b/presentation_amortized_loans.ipynb
@@ -882,7 +882,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Take Away"
+    "### Conclusion"
    ]
   },
   {
@@ -896,7 +896,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Make a Plan"
+    "=> *Inflation helps the borrower but hurts the lender. <=*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1) Before Taking a Loan"
    ]
   },
   {
@@ -917,14 +924,14 @@
     "\n",
     "and we have _limited control_ over $r$ because $r = r(T)$.\n",
     "\n",
-    "=> **We can have good control of all the risks of borrowing money with amortized loan before taking the loan.**"
+    "=> *We can have good control of all the risks of borrowing money with amortized loan before taking the loan. <=*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Renegotiating the Loan and Tune the Parameters in Your Favor"
+    "#### 2) After Taking a Loan"
    ]
   },
   {
@@ -933,7 +940,7 @@
    "source": [
     "Considering the loan with parameters $A$, $P$, $r$ and $T$ we can actively change one of them and the others are indirectly changed.\n",
     "\n",
-    "=> **Finding the sensitivities helps in calculating how the total loan cost changes with respect to the changing parameter.**"
+    "=> *Finding the sensitivities helps in calculating how the total loan cost changes with respect to the changing parameter.* <="
    ]
   },
   {
