--- a/presentation_amortized_loans.ipynb
+++ b/presentation_amortized_loans.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mathematics behind amortized loans"
+    "# Mathematics Behind Amortized Loans"
    ]
   },
   {
