--- a/presentation_fair_price_model.ipynb
+++ b/presentation_fair_price_model.ipynb
@@ -23,7 +23,7 @@
    "id": "4730f280",
    "metadata": {},
    "source": [
-    "Fair-price models for amortized loans are used to quantify the **relationship between cost of borrowing and interest rates**. As the loan principal and/or interest rates increase it becomes harder to service the interest and payoff a mortgage."
+    "Fair-price models for amortized loans quantify the **relationship between cost of borrowing and interest rates**. As the loan principal and/or interest rates increase it becomes more difficult to service the interest and repay a mortgage."
    ]
   },
   {
@@ -31,20 +31,22 @@
    "id": "5e56a2aa",
    "metadata": {},
    "source": [
-    "### Introduction"
+    "### Motivation"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7661a1e9",
+   "id": "2d98fa37",
    "metadata": {},
    "source": [
-    "Amortized loans are a popular debt instrument that people broadly use to finance the purchase of housing. These loans provide liquidity to the housing market and abundance of cheap capital with low interest rates cluminated in higher housing costs."
+    "Amortized loans are a popular debt instrument widely used to finance housing purchases. These loans provide liquidity to the housing market, and abundance of cheap capital with low interest rates has resulted in higher housing costs.\n",
+    "\n",
+    "Consider the following figure"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "31a58c7a",
+   "id": "d341208c",
    "metadata": {},
    "source": [
     "* Stockholm Interbank Offered Rate - STIBOR (Add BBG figure)"
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb826e1f",
+   "id": "34219e59",
    "metadata": {},
    "source": [
     "* Housing index in Sweden for the same period (Add BBG figure)"
@@ -60,10 +62,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "973527dd",
+   "id": "7661a1e9",
    "metadata": {},
    "source": [
-    "Assuming a causal relationship exists for this correlation, having access to cheap capital by lowering interest rates drives up housing prices. It is logical to think that increasing interest rates would have the opposite effect."
+    "Assuming a causal relationship between these factors, the above figures shows that lower interest rates provide access to cheap capital and lead to an increase in housing prices. Therefore, it is reasonable to expect that increasing interest rates would have the opposite effect on the housing prices."
    ]
   },
   {
@@ -71,7 +73,7 @@
    "id": "0894d040",
    "metadata": {},
    "source": [
-    "After keeping the interest rate policy loose with a negative policy rate (Swe., styrräntan) since 2015, Riksbanken changed their stance and started aggressively increasing the policy rate since early 2022. This decision had a direct impact on STIBOR, as well as on the interest rates that banks charge for amortized loans."
+    "After maintaining a loose interest rate policy with negative policy rate (Swe., styrräntan) since 2015, Riksbanken shifted its stance and began aggressively increasing the policy rate in early 2022. This decision directly impacted STIBOR as well as the interest rates charged by banks for amortized loans."
    ]
   },
   {
@@ -87,7 +89,7 @@
    "id": "e5063a6a",
    "metadata": {},
    "source": [
-    "### Matching Loan Terms"
+    "### Matching-Times Model"
    ]
   },
   {
@@ -95,11 +97,11 @@
    "id": "0f91fc81",
    "metadata": {},
    "source": [
-    "The total cost of borrowing depends for an amortized loan is defined as\n",
+    "The total cost of borrowing, denoted by $\\Sigma$, for an amortized loan is defined as\n",
     "\n",
-    "$$ \\chi = A \\, T, \\qquad (1)$$\n",
+    "$$ \\Sigma = A \\, T, \\qquad (1) $$\n",
     "\n",
-    "where $T$ is the duration of the loan, in months, and $A$ is the fixed monthly payment that consists of interest rate payment and amortization. Monthly payment depends on the loan contract and is calculated as\n",
+    "where $T$ is the duration of the loan in months, and $A$ is the fixed monthly payment that consists of interest rate payment and amortization. Monthly payment is calculated based on the loan contract parameters as\n",
     "\n",
     "$$ A = p \\frac{r}{1 - \\left( \\frac{1}{1 + r} \\right)^T}, \\qquad (2a)$$\n",
     "\n",
@@ -121,18 +123,21 @@
    "id": "71d837bb",
    "metadata": {},
    "source": [
-    "We introduce two key terms that are used in determining the repayment duration for housing expenses:\n",
+    "We introduce two key terms that are used in determining the repayment duration for housing:\n",
     "\n",
-    "* $\\chi$ - total cost of borrowing - including the principal amount borrowed and the associated interest\n",
-    "* $\\sigma$ - available income for housing - refers to the portion of income allocated towards housing expenses\n",
+    "* $\\Sigma$ - total cost of borrowing, encompassing the principal amount borrowed and the associated interest\n",
     "\n",
-    "Together, these terms establish the time scale $t$, representing the number of years required to fully repay the initial principal and interest for housing\n",
+    "* $\\sigma$ - portion of income allocated towards housing expenses\n",
     "\n",
-    "$$ \\frac{\\chi}{\\sigma} \\equiv t. \\qquad (3a) $$\n",
+    "Together, these terms establish the time scale $t$, which represents the number of years required to fully repay the initial principal and interest for housing. Mathematically, we express this relationship as:\n",
     "\n",
-    "Depending on the location of the housing, borrowers with mortgages may exhibit different values of $ t $. From (3a) it must hold that $ t = T $, implying\n",
+    "Together, these terms establish the time scale $t$, which represents the number of years required to fully repay the initial principal and interest for housing\n",
     "\n",
-    "$$ \\frac{\\chi}{\\sigma} = T. \\qquad (3b) $$"
+    "$$ \\frac{\\Sigma}{\\sigma} \\equiv t. \\qquad (3a) $$\n",
+    "\n",
+    "Depending on the location of the housing, borrowers with mortgages may exhibit different values of $ t $. $(3a)$ implies that $t$ is equivalent to the loan duration $T$ and leads to:\n",
+    "\n",
+    "$$ \\frac{\\Sigma}{\\sigma} = T. \\qquad (3b) $$"
    ]
   },
   {
@@ -140,7 +145,7 @@
    "id": "417a4be3",
    "metadata": {},
    "source": [
-    ">_There exists a time scale $T$ that represents the time needed to pay off a mortgage. Depending on the location of the housing, borrowers with mortgages may exhibit different values of $T$. Equation (3b) suggests that $T$ is a result of a balance between the labor market (monthly income), the financial market (interest rates), and the housing market (initial loan principal)._"
+    ">_There exists a time scale $T$ that represents the duration required to pay off a mortgage. Depending on the location of the housing, borrowers with mortgages may exhibit different values of $T$. Equation $(3b)$ implies that $T$ is influenced by a delicate balance between various markets: the labor market, the financial market, and the housing market. Specifically, $T$ is shaped by factors such as monthly income in the labor market, prevailing interest rates in the financial market, and the initial loan principal in the housing market. These interconnected market dynamics contribute to the determination of $T$, reflecting the complexity involved in the repayment process._"
    ]
   },
   {
@@ -152,7 +157,7 @@
     "\n",
     "$$ T_1 = T_2, $$\n",
     "\n",
-    "implying that home buyers consider repaying their homes after the same amount of time under different economic circumstances. By substituting (2b) into the above equality, we can solve for $p_2$:\n",
+    "implying that homebuyers repay their homes after the same amount of time under different economic circumstances. By substituting $(2b)$ into the above equality, we can solve for $p_2$\n",
     "\n",
     "$$ p_2 = \\frac{A_2}{r_2} \\left[ 1 - \\left( 1 - r_1 \\frac{p_1}{A_1} \\right)^{ \\frac{\\ln\\left( \\frac{1}{1 + r_2} \\right)}{\\ln\\left( \\frac{1}{1 + r_1} \\right)} } \\right]. \\qquad (4) $$"
    ]
@@ -162,15 +167,15 @@
    "id": "db25fdbf",
    "metadata": {},
    "source": [
-    "Finally, the only unknown is $A$, which can be found by substituting (1) into (3b)\n",
+    "Finally, the only unknown is $A$, which can be determined by substituting (1) into (3b)\n",
     "\n",
     "$$ A = \\sigma .$$\n",
     "\n",
-    "Here, $\\sigma$ is defined as the monthly portion of income allocated for housing\n",
+    "Here, $\\sigma$ represents the monthly portion of income allocated for housing and is modelled as\n",
     "\n",
     "$$ A = \\sigma = \\frac{s (1 - \\tau) \\,}{12} \\delta, \\qquad (5) $$\n",
     "\n",
-    "where $s$ is the annual income, $\\tau$ is the income tax rate, and $\\delta$ is the fraction of $s$ used for housing."
+    "where $s$ denotes the annual bruto income, $\\tau$ represents the income tax rate, and $\\delta$ indicates the fraction of $s$ allocated for housing."
    ]
   },
   {
@@ -188,7 +193,7 @@
    "source": [
     "#### Example 1\n",
     "\n",
-    "Consider an economy with an income tax rate of 30%. A borrower with an annual income of 500,000 SEK intends to borrow 2,000,000 SEK at an annaul interest rate of 1.5% and is willing to allocate 50% of her income to service the loan. She anticipates a change in the annual interest rate to 4.8% in 1.5 years. Meanwhile, her annual salary has increased by 2% and money markets offered a flat continuously-compounded annual interest rate of 0.75%. She seeks to determine the equivalent principal $p_2$ for the previous loan under the new circumstances."
+    "Consider an economy with an income tax rate of 30%. A borrower with an annual bruto income of 500,000 SEK intends to borrow 2,000,000 SEK at an annaul interest rate of 1.5% and is willing to allocate 50% of her income to service the loan. She anticipates a change in the annual interest rate to 4.8% in 1.5 years. Meanwhile, her annual salary has increased by 2% and money markets offered a flat continuously-compounded annual interest rate of 0.75%. She seeks to determine the equivalent principal $p_2$ for the previous loan under the new circumstances."
    ]
   },
   {
@@ -345,14 +350,6 @@
     "\n",
     "plot_matching_T(p1, rhos, r1, r2, tau, deltas, gamma, rf, dt)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0511575b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
