Minor project restructure

--- a/presentation_fair_price_model.ipynb
+++ b/presentation_fair_price_model.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d98fa37",
+   "id": "66b9c8c7",
    "metadata": {},
    "source": [
     "Amortized loans are a popular debt instrument widely used to finance housing purchases. These loans provide liquidity to the housing market, and abundance of cheap capital with low interest rates has resulted in higher housing costs.\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d341208c",
+   "id": "e5e1e93e",
    "metadata": {},
    "source": [
     "* Stockholm Interbank Offered Rate - STIBOR (Add BBG figure)"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34219e59",
+   "id": "332184f0",
    "metadata": {},
    "source": [
     "* Housing index in Sweden for the same period (Add BBG figure)"
@@ -283,7 +283,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from fair_price_model import equivalent_principal_matching_T\n",
+    "from src.fair_price_model import equivalent_principal_matching_T\n",
     "\n",
     "p2 = equivalent_principal_matching_T(p1, s1, r1, r2, tau, delta, gamma) * np.exp(-rf * dt)\n",
     "print(f\"Discounted equivalent principal: {p2:,.2f} SEK\")"
@@ -341,7 +341,7 @@
     "%%capture\n",
     "import numpy as np\n",
     "\n",
-    "from plotting import plot_matching_T\n",
+    "from src.plotting import plot_matching_T\n",
     "\n",
     "gamma, tau, deltas = 0.02, 0.30, np.arange(0.3, 1.01, 0.01)\n",
     "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 4.5, 0.05)\n",
