--- a/presentation_loan_model.ipynb
+++ b/presentation_loan_model.ipynb
@@ -280,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from loan_model import get_payment"
+    "from src.loan_model import get_payment"
    ]
   },
   {
@@ -548,7 +548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting import plot_loan_dynamics"
+    "from src.plotting import plot_loan_dynamics"
    ]
   },
   {
@@ -635,7 +635,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "from plotting import plot_rate_difference\n",
+    "from src.plotting import plot_rate_difference\n",
     "\n",
     "p, r1, r2, r3, T = 2_500_000, 0.030, 0.045, 0.060, 30\n",
     "plot_rate_difference(p, r1, r2, r3, T)"
@@ -690,7 +690,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "from plotting import plot_term_difference\n",
+    "from src.plotting import plot_term_difference\n",
     "\n",
     "p, r, T1, T2, T3 = 2_500_000, 0.045, 10, 20, 30\n",
     "plot_term_difference(p, r, T1, T2, T3)"
@@ -753,7 +753,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "from plotting import plot_term_difference\n",
+    "from src.plotting import plot_term_difference\n",
     "\n",
     "p, r, T1, T2, T3, rf = 2_500_000, 0.045, 10, 20, 30, 0.015\n",
     "plot_term_difference(p, r, T1, T2, T3, 0.015)"
@@ -874,7 +874,7 @@
     }
    ],
    "source": [
-    "from plotting import plot_total_payment_wrt_time\n",
+    "from src.plotting import plot_total_payment_wrt_time\n",
     "\n",
     "r1, r2, r3 = 0.030, 0.045, 0.060\n",
     "plot_total_payment_wrt_time([r1, r2, r3])"
@@ -937,7 +937,7 @@
     }
    ],
    "source": [
-    "from plotting import plot_total_payment_wrt_time\n",
+    "from src.plotting import plot_total_payment_wrt_time\n",
     "\n",
     "r1, r2, r3, rf = 0.030, 0.045, 0.060, 0.02\n",
     "plot_total_payment_wrt_time([r1, r2, r3], rf)"
@@ -988,7 +988,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "from plotting import plot_term_sensitivity\n",
+    "from src.plotting import plot_term_sensitivity\n",
     "\n",
     "plot_term_sensitivity()"
    ]
