Minor correction and language changes

--- a/presentation_annuity_loan_model.ipynb
+++ b/presentation_annuity_loan_model.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mathematics Behind Amortized Loans"
+    "# Mathematics Behind Annuity Loans (Swe., annuitetslån)"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "#### Example 1A\n",
     "    \n",
-    "Jim wants to borrow $P_1$ from the bank. He takes an amortized loan with monthly interest rate of $r$ and agrees to make 3 payments $A$ so that he repays the loan in 3 months."
+    "Jim wants to borrow $P_1$ from the bank. He takes an annuity loan with monthly interest rate of $r$ and agrees to make 3 payments $A$ so that he repays the loan in 3 months."
    ]
   },
   {
@@ -280,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.loan_model import get_payment"
+    "from src.annuity_loan_model import get_payment"
    ]
   },
   {
@@ -456,17 +456,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dynamics of Amortized Loans"
+    "### Dynamics of Annuity Loans"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Amortized loans are payed off with monthly payments $A$ that compose of\n",
+    "Annuity loans are payed off with monthly payments $A$ that compose of\n",
     "\n",
     "- interest payments $ I_n $\n",
-    "- amortization $ A_n^\\prime $ - part that reduces the outstanding principal\n",
+    "- principal repayment $ A_n^\\prime $ - part that reduces the outstanding principal\n",
     "\n",
     "Therefore, we can write\n",
     "\n",
@@ -1039,7 +1039,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the four parameters that describe an amortized loan\n",
+    "From the four parameters that describe an annuity loan\n",
     "\n",
     "- payment $A$\n",
     "- loan principal $P$\n",
@@ -1053,7 +1053,7 @@
     "\n",
     "and we have _limited control_ over $r$ because $r = r(T)$.\n",
     "\n",
-    "=> *We can have good control of all the risks of borrowing money with amortized loan before taking the loan. <=*"
+    "=> *We can have good control of all the risks of borrowing money with annuity loan before taking the loan. <=*"
    ]
   },
   {
