--- a/presentation_fair_price_model.ipynb
+++ b/presentation_fair_price_model.ipynb
@@ -15,7 +15,7 @@
    "id": "6b8694d4",
    "metadata": {},
    "source": [
-    "# Fair-Price Models for Amortized Loans"
+    "# Fair-Price Models for Annuity Loans (Swe., annuitetslån)"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "id": "4730f280",
    "metadata": {},
    "source": [
-    "Fair-price models for amortized loans quantify the **relationship between the cost of borrowing and interest rates**. As interest rates increase, it becomes more difficult to service the interest and repay a mortgage. Consequently, all else being equal, borrowers take out loans with a smaller principal to compensate for higher interest rates. This, in turn, can have an impact on the housing market, potentially leading to lower housing prices."
+    "Fair-price models for annuity loans quantify the **relationship between the cost of borrowing and interest rates**. As interest rates increase, it becomes more difficult to service the interest and repay a mortgage. Consequently, all else being equal, borrowers take out loans with a smaller principal to compensate for higher interest rates. This, in turn, can have an impact on the housing market, potentially leading to lower housing prices."
    ]
   },
   {
@@ -39,7 +39,7 @@
    "id": "66b9c8c7",
    "metadata": {},
    "source": [
-    "Amortized loans are a popular debt instrument widely used to finance housing purchases. These loans provide liquidity to the housing market, and abundance of cheap capital with low interest rates has resulted in higher housing costs.\n",
+    "Annuity loans are a popular debt instrument widely used to finance housing purchases. These loans provide liquidity to the housing market, and abundance of cheap capital with low interest rates has resulted in higher housing costs.\n",
     "\n",
     "Consider the following figure"
    ]
@@ -82,7 +82,7 @@
    "id": "0894d040",
    "metadata": {},
    "source": [
-    "After maintaining a loose interest rate policy with negative policy rate (Swe., styrräntan) since 2015, Riksbanken shifted its stance and began aggressively increasing the policy rate in early 2022. This decision directly impacted STIBOR as well as the interest rates charged by banks for amortized loans."
+    "After maintaining a loose interest rate policy with negative policy rate (Swe., styrräntan) since 2015, Riksbanken shifted its stance and began aggressively increasing the policy rate in early 2022. This decision directly impacted STIBOR as well as the interest rates charged by banks for annuity loans."
    ]
   },
   {
@@ -106,11 +106,11 @@
    "id": "0f91fc81",
    "metadata": {},
    "source": [
-    "The total cost of borrowing, denoted by $\\Sigma$, for an amortized loan is defined as\n",
+    "The total cost of borrowing, denoted by $\\Sigma$, for an annuity loan is defined as\n",
     "\n",
     "$$ \\Sigma = A \\, T, \\qquad (1) $$\n",
     "\n",
-    "where $T$ is the duration of the loan in months, and $A$ is the fixed monthly payment that consists of interest rate payment and amortization. Monthly payment is calculated based on the loan contract parameters as\n",
+    "where $T$ is the duration of the loan in months, and $A$ is the fixed monthly payment that consists of interest rate payment and principal repayment. Monthly payment is calculated based on the loan contract parameters as\n",
     "\n",
     "$$ A = p \\frac{r}{1 - \\left( \\frac{1}{1 + r} \\right)^T}, \\qquad (2a)$$\n",
     "\n",
@@ -217,9 +217,7 @@
     "* `delta = 0.50`\n",
     "* `r2 = 0.048`\n",
     "* `gamma = 0.02`\n",
-    "* `s2 = 500_000 * (1 + gamma)`\n",
-    "* `rf = 0.0000`\n",
-    "* `dt = 1.5`"
+    "* `s2 = 500_000 * (1 + gamma)`"
    ]
   },
   {
@@ -231,8 +229,7 @@
    "source": [
     "gamma, tau, delta = 0.02, 0.30, 0.50\n",
     "p1, r1, s1 = 2_000_000, 0.015, 500_000\n",
-    "r2, s2 = 0.0480, 500_000 * (1 + 0.02)\n",
-    "rf, dt = 0.0000, 1.5"
+    "r2, s2 = 0.0480, 500_000 * (1 + gamma)"
    ]
   },
   {
@@ -269,7 +266,7 @@
     }
    ],
    "source": [
-    "A2 = s1 * (1 + 0.02) * (1 - tau) * delta / 12\n",
+    "A2 = s1 * (1 + gamma) * (1 - tau) * delta / 12\n",
     "print(f\"Monthly payment at t2: {round(A2, -2):,.2f} SEK\")"
    ]
   },
@@ -283,17 +280,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Discounted equivalent principal: 1,679,778.51 SEK\n"
+      "Equivalent principal: 1,679,778.51 SEK\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "from src.fair_price_model import equivalent_principal_matching_T\n",
+    "from src.fair_price_model import annuity_matching_T\n",
     "\n",
-    "p2 = equivalent_principal_matching_T(p1, s1, r1, r2, tau, delta, gamma) * np.exp(-rf * dt)\n",
-    "print(f\"Discounted equivalent principal: {p2:,.2f} SEK\")"
+    "p2 = annuity_matching_T(p1, s1, r1, r2, tau, delta, gamma)\n",
+    "print(f\"Equivalent principal: {p2:,.2f} SEK\")"
    ]
   },
   {
@@ -306,12 +303,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Discounted equivalent principal: -16.01% SEK\n"
+      "Equivalent principal: -16.01% SEK\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Discounted equivalent principal: {(p2 - p1)/p1:.2%} SEK\")"
+    "print(f\"Equivalent principal: {(p2 - p1)/p1:.2%} SEK\")"
    ]
   },
   {
@@ -348,14 +345,13 @@
     "%%capture\n",
     "import numpy as np\n",
     "\n",
-    "from src.plotting import plot_matching_T\n",
+    "from src.plotting import plot_annuity_matching_T\n",
     "\n",
     "gamma, tau, deltas = 0.02, 0.30, np.arange(0.3, 1.01, 0.01)\n",
     "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 4.5, 0.05)\n",
-    "r2, s2 = 0.0480, 500_000 * (1 + 0.02)\n",
-    "rf, dt = 0.0000, 1.5\n",
+    "r2, s2 = 0.0480, 500_000 * (1 + gamma)\n",
     "\n",
-    "plot_matching_T(p1, rhos, r1, r2, tau, deltas, gamma, rf, dt)"
+    "plot_annuity_matching_T(p1, rhos, r1, r2, tau, deltas, gamma, 0, 0)"
    ]
   }
  ],
