Add amortized loan model

--- a/presentation_fair_price_model.ipynb
+++ b/presentation_fair_price_model.ipynb
@@ -15,7 +15,7 @@
    "id": "6b8694d4",
    "metadata": {},
    "source": [
-    "# Fair-Price Models for Annuity Loans (Swe., annuitetslån)"
+    "# Fair-Price Models for Loans"
    ]
   },
   {
@@ -95,10 +95,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5063a6a",
+   "id": "c1f90f2f",
    "metadata": {},
    "source": [
-    "### Matching-Times Model"
+    "### Annuity Loans (Swe., annuitetslån) - Matching-Times Model"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "id": "4ac22374",
    "metadata": {},
    "source": [
-    "#### Example 2"
+    "#### Example 2A"
    ]
   },
   {
@@ -332,7 +332,7 @@
    "id": "46221bd7",
    "metadata": {},
    "source": [
-    "For the parameters given in **Example 1** calculate the relative change of discounted equivalent principal $p_2$ compared to $p_1$ for a range of borrowers with different loan sizes $\\rho = p_1/s_1 \\in [2, 4.5]$ and fractions allocated to repaying the debt $\\delta \\in [0.3, 1]$."
+    "For the parameters given in **Example 1** calculate the relative change of equivalent principal $p_2$ compared to $p_1$ for a range of borrowers with different *ANNUITY LOAN* sizes $\\rho = p_1/s_1 \\in [2, 4.5]$ and fractions allocated to repaying the debt $\\delta \\in [0.3, 1]$."
    ]
   },
   {
@@ -351,7 +351,42 @@
     "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 4.5, 0.05)\n",
     "r2, s2 = 0.0480, 500_000 * (1 + gamma)\n",
     "\n",
-    "plot_annuity_matching_T(p1, rhos, r1, r2, tau, deltas, gamma, 0, 0)"
+    "plot_annuity_matching_T(p1, rhos, r1, r2, tau, deltas, gamma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d5a8cb7",
+   "metadata": {},
+   "source": [
+    "#### Example 2B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36368f5d",
+   "metadata": {},
+   "source": [
+    "For the parameters given in **Example 1** calculate the relative change of equivalent principal $p_2$ compared to $p_1$ for a range of borrowers with different *AMORTIZED LOAN* sizes $\\rho = p_1/s_1 \\in [2, 4.5]$ and fractions allocated to repaying the debt $\\delta \\in [0.3, 1]$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98a0419d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "import numpy as np\n",
+    "\n",
+    "from src.plotting import plot_amortized_matching_T\n",
+    "\n",
+    "gamma, tau, deltas = 0.02, 0.30, np.arange(0.3, 1.01, 0.01)\n",
+    "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 4.5, 0.05)\n",
+    "r2, s2 = 0.0480, 500_000 * (1 + gamma)\n",
+    "\n",
+    "plot_amortized_matching_T(p1, rhos, r1, r2, tau, deltas, gamma)"
    ]
   }
  ],
